# fit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  fit  hoge.txt  log4rs.yaml  memo  test.txt
core/: status.sh  utils.sh
doc/: awk.md  bash.md  fzf-opt.md  fzf.md  memo.md  screen.md
scripts/: add.sh  branch.sh  commit.sh  diff.sh  git.sh  info.sh  log.sh  merge.sh  rebase.sh  restore.sh  stage.sh  status.sh  switch.sh  swtich.sh  tree.sh  unstage.sh
scripts/core/: branch.sh  config.sh  const.sh  fzf.sh  log.sh  status.sh  tput.sh  utils.sh  wrapper.sh
scripts/git/: branch.sh  diff.sh  log.sh  pull.sh  push.sh  stash.sh  status.sh
scripts/private/: branch.sh  diff.sh  log.sh  status.sh
scripts/public/: git.sh  help.sh
scripts/utils/: file.sh  git.sh  string.sh
src/: event.rs  main.rs
src/api/: git.rs
src/demo/: app.rs  ui.rs
src/git/: mod.rs
src/ui/: app.rs  common.rs  mod.rs
src/ui/screen/: status.rs
src/ui/view/: console.rs  mod.rs  status.rs
src/util/: mod.rs
utils/: git.sh
