[package]
name = "fit"
version = "0.1.0"
authors = ["oktntko <oktntko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
rand = "0.7"
argh = "0.1"
regex = "1"

[dev-dependencies]
