[package]
name = "fit"
version = "0.1.0"
authors = ["oktntko <oktntko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
rand = "0.7"
argh = "0.1"
log = "0.4.0"
log4rs = "1.0.0"
